--- a/_layouts/single_page.html
+++ b/_layouts/single_page.html
@@ -3,10 +3,17 @@
 {% else %}
     {% include header.html %}
 
-    <div id="singlePost">
-        <h1>{{page.title}}</h1>
-        {{page.content}}
+<div class="page-wrapper">
+      <div class="content-wrapper centered"> 
+        <div id="singlePost">
+          <h1>{{ page.title }}</h1>
+          {{ content }}
+        </div>
+      </div>
     </div>
-    
+
+
+    <script src="{{ '/assets/js/lightbox.js' | relative_url }}"></script>
+
     {% include footer.html %}
 {% endif %}
