--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1441,6 +1441,7 @@ img.lazy-img {
    
 }
 
+
 /* Table of content */
 
 
@@ -1627,6 +1628,11 @@ body {
 .content-wrapper {
     right: 137px;
 }
+
+.content-wrapper.centered {
+  right: 0;
+}
+
 }
 
 @media only screen and (max-width:1125px) {
