--- a/_includes/header.html
+++ b/_includes/header.html
@@ -47,6 +47,8 @@
                 <li class="nav-item">
                     <a aria-current="page" href="{{site.baseurl}}/about">About</a>
                 </li>
+                 <!-- <li class="nav-item">
+                    <a aria-current="page" href="{{site.baseurl}}/about">UX for GenAI</a> </li> -->
                 <!-- <li class="nav-item icon download">
                     <a class="resume-placeholder " href="" alt="Download resume">
                         R&#233sum&#233</a>
