--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -775,8 +775,8 @@ span {
   text-align:left;
   gap: 1rem;
   max-width: 780px;
-  margin: 0 24px;
-  width: 100%;
+  /* margin: 0 24px;
+  width: 100%; */
   padding-top: 2rem;
   padding-bottom: 2rem;
 }
